# stoyozipxx

./: .gitignore  .travis.yml  BUILD  CMakeLists.txt  README.md  WORKSPACE  lorem-ipsum.txt  lorem-ipsum.txt.sz
ci/: Dockerfile
src/: buffer.hpp  compressor.cpp  compressor.hpp  decompressor.cpp  decompressor.hpp  main.cpp  oligorithm.hpp  test.cpp  tester.cpp  tester.hpp
